k8s-configs/offres-chart/templates/service-offres-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-service-offres-app-lb
spec:
  type: LoadBalancer
  selector:
    app: release-name-service-offres-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
